welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: ')' expected but '=' found.
if ( (a+b)=10 || (b+c)=10 || (c+a)=10){
          ^blueTicket:2: error: illegal start of simple expression
if ( (a+b)=10 || (b+c)=10 || (c+a)=10){
                      ^